# AI-Tarot-Friend

./: .editorconfig  .gitignore  ARCHITECTURE.md  Makefile  README.md  WBS.md  docker-compose.yml  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: ci.yml
CaringService/: Dockerfile  pyproject.toml
CaringService/app/: config.py  main.py
CaringService/app/api/: health.py
CaringService/app/models/: caring.py
CaringService/app/proto/dal/v1/: caring_pb2.py  customer_pb2.py  dal_pb2.py  dal_pb2_grpc.py  scheduler_pb2.py  shop_pb2.py
CaringService/app/proto/events/v1/: event_pb2.py
CaringService/tests/: test_health.py
CustomerManagement/: .env.example  CUSTOMER_SCHEMA.md  Dockerfile  package-lock.json  package.json  tsconfig.json
CustomerManagement/prisma/: schema.prisma
CustomerManagement/src/: index.ts
CustomerManagement/tests/: customer.service.test.ts  metaphysical.test.ts  setup.ts
DataAccessLayer/: Dockerfile  go.mod  go.sum
DataAccessLayer/configs/: cache_config.yaml
ShoppingCart/: .env.example  Dockerfile  SHOPIFY_INTEGRATION.md  package.json  vitest.config.ts
ShoppingCart/prisma/: schema.prisma
TarotReading/: .env.example  .eslintrc.js  CLAUDE.md  FRONTEND_STATUS.md  HOW_TO_USE.md  IMPLEMENTATION_STATUS.md  MVP_STATUS.md  QUICKSTART_ACTUAL.md  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
TarotistScheduler/: .env.example  Dockerfile  package.json
frontend/: index-v1.html  index-v3-forest.html  index.html
proto/: buf.gen.yaml  buf.yaml
scripts/: init-multiple-dbs.sh
(+178 files in other folders)
